--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -315,7 +315,11 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+
+                                                     {% if work.status == 0 %}
+                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
+
                                                     <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
 
                                                 </div>
@@ -576,7 +580,10 @@
                                             </div>
                                         </div>
 
-                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                        {% if work.status == 0 %}
+                                            <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                        {% endif %}
+
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
 
@@ -657,7 +664,9 @@
                                                     <input class="form-control" name="d_13" id="d_13" type="text" placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
                                             </div>
-                                            <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                              {% if work.status == 0 %}
+                                                <button class="btn btn-primary nextBtn pull-right store" type="button">Yakunlash</button>
+                                                  {% endif %}
                                             <input type="text" value="{{ work.id }}" id="work_id" style="display:none;">
                                             <input type="text" value="{{ user.profile.full_name }}" id="worker" style="display:none;">
                                         </div>
@@ -907,7 +916,9 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% if work.status == 0 %}
+                                                            <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                                     {% endif %}
                                                     <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
 
                                                 </div>
@@ -1161,7 +1172,9 @@
                                             </div>
                                         </div>
 
-                                        <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                         {% if work.status == 0 %}
+                                             <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
+                                         {% endif %}
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
                                     </div>
@@ -1242,7 +1255,11 @@
                                                     <input class="form-control" name="d_13" id="d_13" type="text" value="{{ form.d_13 }}" placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
                                             </div>
-                                            <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                             {% if work.status == 0 %}
+                                                <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
+                                             {% endif %}
+
+
                                             <input type="text" value="{{ work.id }}" id="work_id" style="display:none;">
                                             <input type="text" value="{{ user.profile.full_name }}" id="worker" style="display:none;">
                                         </div>
