--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -181,7 +181,7 @@
                                     <a class="nav-link menu-title link-nav" href="{% url 'worker_new_works' %}">
                                         <i data-feather="file"></i>
 
-                                        <span>Tопшириклар &nbsp;&nbsp;
+                                        <span style="white-space: nowrap;">Янги топшириқлар
                                               {% if count.new_works_worker != 0 %}
                                                 <span style="float: right" class="badge rounded-pill badge-danger">
                                                      {{ count.new_works_worker }}
