--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -916,7 +916,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                     {% if work.status == 0 %}
+                                                     {% if work.status == 0 or work.status == 2 %}
                                                             <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                                      {% endif %}
                                                     <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
@@ -1172,7 +1172,7 @@
                                             </div>
                                         </div>
 
-                                         {% if work.status == 0 %}
+                                        {% if work.status == 0 or work.status == 2 %}
                                              <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Saqlash</button>
                                          {% endif %}
                                         <button class="btn btn-primary nextBtn pull-right" type="button">Keyingisi <i class="fa fa-long-arrow-right"></i></button>
@@ -1255,7 +1255,7 @@
                                                     <input class="form-control" name="d_13" id="d_13" type="text" value="{{ form.d_13 }}" placeholder="должность, Ф.И.О. проверяющего, дата проведения контроля и приемки, оценка работ">
                                                 </div>
                                             </div>
-                                             {% if work.status == 0 %}
+                                             {% if work.status == 0 or work.status == 2 %}
                                                 <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" type="button">Yakunlash</button>
                                              {% endif %}
 
