--- a/topografiya/templates/leader/polevoy/checking_polevoy_works.html
+++ b/topografiya/templates/leader/polevoy/checking_polevoy_works.html
@@ -2435,18 +2435,18 @@
 
                                                                             </div>
 
-                                                    {% if workerobject.status != 4 %}
-                                                               <div class="row p-2 mb-2">
-                                                                    <div class="col-md-6 card p-2 shadow-lg">
-                                                                        <button class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-refresh"></i> &nbsp; Қайтариш</button>
-                                                                    </div>
-
-                                                                    <div class="col-md-6 card p-2 shadow-lg">
-                                                                        <button class="btn btn-primary btn-lg" type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="send_to_kameral"  style="width: 100%"> <i class="fa fa-check"></i> Камерал назоратга юбориш</button>
-                                                                    </div>
-                                                                </div>
-
-                                                    {% endif %}
+{#                                                    {% if workerobject.status != 4 %}#}
+{#                                                               <div class="row p-2 mb-2">#}
+{#                                                                    <div class="col-md-6 card p-2 shadow-lg">#}
+{#                                                                        <button class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-refresh"></i> &nbsp; Қайтариш</button>#}
+{#                                                                    </div>#}
+{##}
+{#                                                                    <div class="col-md-6 card p-2 shadow-lg">#}
+{#                                                                        <button class="btn btn-primary btn-lg" type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="send_to_kameral"  style="width: 100%"> <i class="fa fa-check"></i> Камерал назоратга юбориш</button>#}
+{#                                                                    </div>#}
+{#                                                                </div>#}
+{##}
+{#                                                    {% endif %}#}
 
 
                                                                         </div>
@@ -4399,17 +4399,7 @@
 
 
                                                                             </div>
-                                            {% if workerobject.status != 4 %}
-                                                <div class="row p-2 mb-2">
-                                                    <div class="col-md-6 card p-2 shadow-lg">
-                                                        <button class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-refresh"></i> Қайтариш</button>
-                                                    </div>
 
-                                                    <div class="col-md-6 card p-2 shadow-lg">
-                                                        <button class="btn btn-primary btn-lg" type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="send_to_kameral"  style="width: 100%"> <i class="fa fa-check"></i> Камерал назоратга юбориш</button>
-                                                    </div>
-                                                </div>
-                                            {% endif %}
 
                                                                         </div>
                                                                     </div>
@@ -4437,6 +4427,18 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                            {% if workerobject.status != 4 %}
+                                                <div class="row p-2 mb-2">
+                                                    <div class="col-md-6 card p-2 shadow-lg">
+                                                        <button class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-refresh"></i> Қайтариш</button>
+                                                    </div>
+
+                                                    <div class="col-md-6 card p-2 shadow-lg">
+                                                        <button class="btn btn-primary btn-lg" type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="send_to_kameral"  style="width: 100%"> <i class="fa fa-check"></i> Камерал назоратга юбориш</button>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
 
                                      <input type="text" name="work_id" id="work_id" value="{{ workerobject.object.id }}" style="display: none">
                                             <input type="text" name="worker" id="worker" value="{{ user.profile.full_name }}" style="display: none">
