--- a/topografiya/templates/leader/komeral/show_komeral_work.html
+++ b/topografiya/templates/leader/komeral/show_komeral_work.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% load static %}
-{% block title %} Майдон назоратини текшириш {% endblock %}
+{% block title %} Комерал назорати {% endblock %}
 
 {% block content%}
 
@@ -549,7 +549,7 @@
                                                         <label class="col-sm-3 col-form-label" for="inputEmail3">По
                                                             объекту:</label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" id="a2" name="a2" value="{{ work.a2 }}" type="text"
+                                                            <input class="form-control" id="a2" value="{{ work.a2 }}" name="a2" type="text"
                                                                    placeholder="" >
                                                         </div>
                                                     </div>
@@ -608,7 +608,7 @@
                                                                     <td>Отыскивание исходных пунктов</td>
                                                                     <td>знак</td>
                                                                     <td><input class="border-0 w-100" type="text"
-                                                                               placeholder="" id="a7" name="a7" value="{{ work.a7 }}"></td>
+                                                                               placeholder="" id="a7" value="{{ work.a7 }}" name="a7"></td>
                                                                     <td><input class="border-0 w-100" type="text"
                                                                                placeholder="" id="a8" name="a8" value="{{ work.a8 }}"></td>
                                                                     <td><input class="border-0 w-100" type="text"
@@ -710,7 +710,7 @@
                                                           placeholder="..." id="a32" name="a32">{{ work.a32 }}</textarea>
                                                 <p class="m-t-10">и грунтовые репера <span>
                                                     <input
-                                                        style="border:1px solid #e6edef;width: 39%" type="text" id="a33" name="a33"></span>
+                                                        style="border:1px solid #e6edef;width: 39%" type="text" id="a33" name="a33" value="{{ work.a33 }}"></span>
                                                     имеющие отметки нивелирования <span><input
                                                             style="border:1px solid #e6edef;" type="text" id="a34" name="a34" value="{{ work.a34 }}"></span> кл.
                                                 </p>
@@ -768,8 +768,8 @@
                                                         <label class="col-sm-3 col-form-label">Акт сдачи пунктов на
                                                             наблюдение за сохранностью</label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="text" id="a46" name="a46" value="{{ work.a45 }}"
-                                                                   placeholder="когда, кому сданы – Ф.И.О.">
+                                                            <input class="form-control" type="text" id="a46" name="a46"
+                                                                   placeholder="когда, кому сданы – Ф.И.О." value="{{ work.a46 }}">
                                                         </div>
                                                     </div>
                                                     <div class="mb-3 row">
@@ -791,8 +791,8 @@
                                                         <label class="col-sm-3 col-form-label">Пояснительная записка,
                                                             тех. отчет</label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="text" value="{{ work.a49 }}"
-                                                                   placeholder="кто и что составил, качество" id="a49" name="a49">
+                                                            <input class="form-control" type="text"
+                                                                   placeholder="кто и что составил, качество" id="a49" value="{{ work.a49 }}" name="a49">
                                                         </div>
                                                     </div>
                                                     <div class="mb-3 row">
@@ -804,15 +804,15 @@
                                                                       placeholder="
                                                                       указать среднее количество пикетов на дм2, заполнение контуров, правильность
                                                                       применения условных знаков,
-                                                                      сводки по рамкам, удаление лишней ненужной ситуации с планшетов и качество корректуры">{{ work.a50 }}
-                                                            </textarea>
+                                                                      сводки по рамкам, удаление лишней ненужной ситуации с планшетов и качество корректуры">
+                                                            {{ work.a50 }}</textarea>
                                                         </div>
                                                     </div>
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Замечания
                                                             исправил</label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="number" value="{{ work.a51 }}"
+                                                            <input class="form-control" type="text" value="{{ work.a51 }}"
                                                                    placeholder="подпись, Ф.И.О., должность исполнителя" id="a51" name="a51">
                                                         </div>
                                                     </div>
@@ -827,7 +827,7 @@
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Работу сдал</label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="text" id="a53" name="a53" value="{{ work.a53 }}"
+                                                            <input class="form-control" type="text" id="a53" value="{{ work.a53 }}" name="a53"
                                                                    placeholder="подпись, Ф.И.О., исполнителя">
                                                         </div>
                                                     </div>
@@ -861,7 +861,7 @@
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Замечание по экспликации колодцев и опор</label>
                                                         <div class="col-sm-9">
-                                                            <textarea class="form-control" type="text" id="a58" name="a58" placeholder="">{{ work.a58 }}</textarea>
+                                                            <textarea class="form-control" type="text" id="a58" name="a58"  placeholder="">{{ work.a58 }}</textarea>
                                                         </div>
                                                     </div>
                                                     <div class="mb-3 row">
@@ -894,7 +894,7 @@
                                                     <div class="mb-3 row">
                                                         <label class="col-sm-3 col-form-label">Работу принял</label>
                                                         <div class="col-sm-9">
-                                                            <input class="form-control" type="text" id="a63" name="a63" value="{{ work.a63 }}"
+                                                            <input class="form-control" type="text" id="a63" value="{{ work.a63 }}" name="a63"
                                                                    placeholder="подпись, Ф.И.О., должность принявшего">
                                                         </div>
                                                     </div>
@@ -918,18 +918,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
-                                        {% if work.status != 2 %}
-                                        <div class="row p-2 mb-2">
-                                             <div class="col-md-6 card p-2 shadow-lg">
-                                                 <button class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}" style="width: 100%"> <i class="fa fa-refresh"></i> Қайтариш</button>
-                                             </div>
-
-                                            <div class="col-md-6 card p-2 shadow-lg">
-                                                <button class="btn btn-primary btn-lg"  type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.id }}"  id="save_akt"  style="width: 100%"> <i class="fa fa-check"></i> Бош геодезис назоратига юбориш</button>
-                                            </div>
-                                        </div>
-                                        {% endif %}
 
 
                                      <input type="text" name="work_id" id="work_id" value="{{ workerobject.object.id }}" style="display: none">
@@ -961,9 +949,9 @@
                                                                </div>
                                                            </ul>
                                                             <br>
-                                                            <h5 class="m-b-20">Хатолик аризаси</h5>
+                                                            <h5 class="m-b-20">Хатолик аризаси файли</h5>
                                                             <input class="form-control" id="reason_file" name="reason_file" type="file">
-                                                            <h5 class="m-t-20 m-b-20">Хатолик аризаси</h5>
+                                                            <h5 class="m-t-20 m-b-20">Хатолик аризаси матни</h5>
                                                             <textarea type="text" class="form-control" id="reason" name="reason" rows="6"></textarea>
                                                         </div>
                                                         <div class="modal-footer">
@@ -997,11 +985,11 @@
         for(var i=1;i<64;i++){
                 array.push($('#a'+i).val());
         }
-
+        data.append("array", array);
         event.preventDefault();
 
-        if($('#a1').val() == 0){
-           alert("Maydonni to'ldiring");
+        if($('#a61').val() == 0){
+           alert("Ishni baxolash maydonini to'ldiring");
         }
         else{
         $.ajax({
@@ -1012,7 +1000,7 @@
             contentType: false,
             processData: false,
             success: function (result){
-               location.replace(window.location.pathname);
+               location.replace('/leader_komeral_works');
             },
 
             error: function(){
